# nacka-energi

./: .gitignore  CLAUDE.md  LICENSE  README.md  conftest.py  docker-compose.yml  hacs.json  pyproject.toml
.github/workflows/: validate.yml
custom_components/nacka_energi/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  strings.json
tests/components/nacka_energi/: __init__.py  conftest.py  test_api.py  test_config_flow.py  test_coordinator.py  test_energy_sensors.py  test_invoice_sensors.py  test_setup.py  test_user_property_sensors.py  test_yearly_sensors.py
